# link-shortener

./: .Dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: release-build.yml
client/: .env.example  admin.html  biome.json  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
client/public/: robots.txt
client/public/.well-known/: security.txt
client/src/: Admin.tsx  App.tsx  api-types.d.ts  constants.ts  index.css  index.tsx
client/src/components/: AppHeader.tsx  CreateUrlDialog.tsx  QRCodeDialogContent.tsx  UrlCard.tsx  UrlCardButtons.tsx
client/src/pages/: AdminPage.tsx
src/: db.rs  main.rs
src/routes/: api.rs  mod.rs
