[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3     # Optimize for binary size - P.S, default release is 3 anyway
strip = true      # Remove debug symbols

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "http2", "tracing"] }
axum-client-ip = "0.6.0"
dotenvy = "0.15.7"
libsql = "0.4.0"
mime_guess = "2.0.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = "0.7.11"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["auth", "catch-panic", "compression-zstd", "cors", "fs", "normalize-path", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typeshare = "1.0.3"
url = "2.5.2"
